src/test/resources/acceptance/reject/declarationAfterSemicolonStatement.ul
int bar ()
{
    int id1;

    ;

    int id2;
}
